--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -5,6 +5,11 @@
     flex-direction: column;
     align-items: center;
     margin: 50px auto 0;
+
+    button{
+      margin-left: auto;
+      margin-top: 50px;
+    }
   
     .checkout-header {
       width: 100%;
@@ -28,5 +33,11 @@
       margin-left: auto;
       font-size: 36px;
     }
+  .test-warning{
+    text-align: center;
+    color: red;
+    font-size: 24px;
+    margin-top: 40px;
+  }
   }
   
