--- a/client/src/components/collection-item/collection-item.styles.scss
+++ b/client/src/components/collection-item/collection-item.styles.scss
@@ -5,6 +5,9 @@
   height: 350px;
   align-items: center;
   position: relative;
+  @media screen and (max-width: 800px){
+    width: 40vw;
+  }
 
   .image {
     width: 100%;
@@ -20,6 +23,13 @@
     position: absolute;
     top: 255px;
     display: none;
+    @media screen and (max-width: 800px){
+      display: block;
+      opacity: 0.9;
+      min-width: unset;
+      padding: 0 10px;
+    }
+
   }
 
   &:hover {
@@ -32,6 +42,19 @@
       display: flex;
     }
   }
+
+  @media screen and (max-width: 800px){
+    &:hover {
+      .image {
+        opacity: unset;
+      }
+  
+      .custom-button {
+        opacity: unset;
+      }
+    }
+  }
+  
 
   .collection-footer {
     width: 100%;
