--- a/client/src/components/menu-item/menu-item.styles.scss
+++ b/client/src/components/menu-item/menu-item.styles.scss
@@ -8,6 +8,11 @@
     border: 1px solid black;
     margin: 0 7.5px 15px;
     overflow: hidden;
+
+    @media screen and (max-width: 800px){
+      height: 200px;
+    }
+
     
     .background-image{
       background-position: center;
@@ -18,6 +23,9 @@
     }
     &.large{
       height: 380px;
+      @media screen and (max-width: 800px){
+        height: 200px;
+      }
     }
   
     &:first-child {
@@ -66,7 +74,7 @@
       }
     }
     
-
+    
 
   }
 
