--- a/client/src/components/sign-in/sign-in.styles.scss
+++ b/client/src/components/sign-in/sign-in.styles.scss
@@ -2,6 +2,9 @@
     width: 380px;
     display: flex;
     flex-direction: column;
+    @media screen and (max-width: 800px){
+        width: 90vw;
+    }
 }
 
 .title {
@@ -10,4 +13,11 @@
 .buttons {
     display: flex;
     justify-content: space-between;
+    @media screen and (max-width: 800px){
+        display: block;
+    }
+}
+
+.mtop--small{
+    margin-top: 20px;
 }
