--- a/client/src/pages/checkout/checkout.styles.scss
+++ b/client/src/pages/checkout/checkout.styles.scss
@@ -5,10 +5,16 @@
     flex-direction: column;
     align-items: center;
     margin: 50px auto 0;
+    @media screen and (max-width: 800px){
+      width: 90%;
+    }
 
     button{
       margin-left: auto;
       margin-top: 50px;
+      @media screen and (max-width: 800px){
+        margin: 50px auto;
+      }
     }
   
     .checkout-header {
